# clang-faces

./: CMakeLists.txt  clang-faces.el  main.cpp  sniper.cpp  utils.cpp  utils.h
scripts/: test1.sh
